delete unused files,moved body-parser and method-override middleware before route definitions

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -107,7 +107,7 @@
     "scripts": {
         "start": "node index.js"
     },
-    "author": "Your Name",
+    "author": "Olha",
     "license": "MIT"
 }</code></pre>
     </div>
